--- a/app/globals.css
+++ b/app/globals.css
@@ -28,4 +28,27 @@ width: fit-content;
         width: 110px;
         
     }
+    .image{
+      overflow: hidden;
+      height: 100vh;
+      width: 100vw;
+      
+    }
+   
+ 
+}
+
+@media (max-width:300px) {
+  
+   .nav{
+      display: flex;
+      flex-direction: column;
+      
+    }
+    
+}
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
