--- a/app/globals.css
+++ b/app/globals.css
@@ -52,3 +52,10 @@ html, body {
   padding: 0;
   overflow-x: hidden;
 }
+
+  .search-container {
+  overflow-x: auto;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch; /* smooth scrolling on iOS */
+  padding: 5px;
+}
