--- a/app/globals.css
+++ b/app/globals.css
@@ -34,6 +34,7 @@ width: fit-content;
       width: 100vw;
       
     }
+    
    
  
 }
@@ -45,6 +46,11 @@ width: fit-content;
       flex-direction: column;
       
     }
+     .box{
+      display: flex;
+      flex-direction: column;
+     }
+   
     
 }
 html, body {
